build MSP
