# pkg/handlers/get/getByGenre.go
@@ -2,37 +2,34 @@ package get
 
 import (
 	"net/http"
+	"strings"
 
 	"github.com/gorilla/mux"
 	"github.com/rahulsidpatil/mymdb/pkg/dal"
-	"github.com/rahulsidpatil/mymdb/pkg/logging"
 	"github.com/rahulsidpatil/mymdb/pkg/utils"
 )
 
-var (
-	logger = logging.NewLogger()
-)
-
-// @Summary Fetch movie by ID
-// @Description Fetch movie by ID
+// @Summary Fetch movies by Genre
+// @Description Fetch movies by Genre
 // @Produce  json
-// @Param Id path string true "Movie Id"
+// @Param Genre path string true "Movie Genre"
 // @Success 200 {object} entities.Movie
 // @Failure 404 {object} utils.HTTPError
 // @Failure 500 {object} utils.HTTPError
-// @Router /movies/Id/{Id} [get]
-func GetById(w http.ResponseWriter, r *http.Request) {
+// @Router /movies/Genre/{Genre} [get]
+func GetByGenre(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
-	movieId, ok := vars["Id"]
+	genre, ok := vars["Genre"]
 	if !ok {
 		utils.RespondWithError(w, http.StatusBadRequest, "Invalid movie id")
 		return
 	}
+	movieGenres := strings.Split(genre, ",")
 	db := dal.GetMySQLDriver()
 	logger.Sugar().Infof("Got this DB driver:%#v", db)
-	m, err := db.GetMovieById(movieId)
-	if err != nil {
-		utils.RespondWithError(w, http.StatusNoContent, err.Error())
+	m := db.GetMoviesByGenre(movieGenres)
+	if len(m) == 0 {
+		utils.RespondWithError(w, http.StatusNoContent, "No movies!!")
 	}
 	utils.RespondWithJSON(w, http.StatusOK, m)
 }
